fix(range): prevent range knob clipping on iOS

--- a/core/src/components/range/range.ios.scss
+++ b/core/src/components/range/range.ios.scss
@@ -21,9 +21,28 @@
   @include padding($range-ios-padding-vertical, $range-ios-padding-horizontal);
 }
 
-:host(.in-item:not(.range-has-label):not(.legacy-range)) .range-slider {
+:host(.in-item:not(.range-has-label):not(.range-has-start-icon):not(.range-has-end-icon):not(.legacy-range)) .range-slider {
+  // Add margins on both sides of the range slider
+  // to prevent the range knob from being cut off.
   @include margin(null, $range-ios-padding-horizontal);
 }
+
+:host(.in-item.range-has-label.range-label-placement-start:not(.legacy-range):not(.range-has-end-icon)) .range-slider,
+:host(.in-item.range-has-start-icon:not(.legacy-range):not(.range-has-end-icon)) .range-slider {
+  // Only add margin to the right if the range has
+  // a label to the left or a start icon.
+  // Do not add right margin if the range has an end icon.
+  @include margin(null, $range-ios-padding-horizontal, null, 0);
+}
+
+:host(.in-item.range-has-label.range-label-placement-end:not(.legacy-range):not(.range-has-start-icon)) .range-slider,
+:host(.in-item.range-has-end-icon:not(.legacy-range):not(.range-has-start-icon)) .range-slider {
+  // Only add margin to the left if the range has
+  // a label to the right or an end icon.
+  // Do not add left margin if the range has a start icon.
+  @include margin(null, 0, null, $range-ios-padding-horizontal);
+}
+
 
 :host(.ion-color) .range-bar-active,
 :host(.ion-color) .range-tick-active {
